--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.18.2",
     "chalk": "^2.4.1",
     "express": "^4.14.0",
+    "faker": "^5.1.0",
     "pg": "^8.5.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
